2011-01-27  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectaion change.

        * platform/chromium/test_expectations.txt:

2011-01-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dan Bernstein.

        Add or update WebKit2-specific results to account for different reporting of scroll position
        https://bugs.webkit.org/show_bug.cgi?id=53226

        * platform/mac-wk2/fast/multicol: Added.
        * platform/mac-wk2/fast/multicol/vertical-rl: Added.
        * platform/mac-wk2/fast/multicol/vertical-rl/column-break-with-balancing-expected.txt: Added.
        * platform/mac-wk2/fast/multicol/vertical-rl/float-paginate-complex-expected.txt: Added.

2011-01-26  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] LayoutTests/media/audio-mpeg4-supported.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53125

        * platform/gtk/Skipped: Unskip fixed test.

2011-01-27  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, updated GTK baselines after r76726.

        * platform/gtk/fast/blockflow/Kusa-Makura-background-canvas-expected.txt:
        * platform/gtk/fast/blockflow/vertical-baseline-alignment-expected.txt:
        * platform/gtk/fast/lists/002-vertical-expected.txt:
        * platform/gtk/fast/lists/003-vertical-expected.txt:
        * platform/gtk/fast/overflow/overflow-rtl-vertical-expected.txt:
        * platform/gtk/fast/table/028-vertical-expected.txt:
        * platform/gtk/fast/table/border-collapsing/003-vertical-expected.txt:
        * platform/gtk/fast/table/height-percent-test-vertical-expected.txt:

2011-01-27  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectation change.

        Update expectation for r76760.

        * platform/chromium/test_expectations.txt:

2011-01-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dan Bernstein.
