@@ -5093,3 +5093,6 @@ http/tests/xmlhttprequest/simple-cross-origin-denied-events-sync.html
 http/tests/xmlhttprequest/simple-cross-origin-denied-events.html
 http/tests/xmlhttprequest/simple-cross-origin-denied-events-post-sync.html
 
+# This media test fails; possibly because the AAC codec is not installed on the test bots:
+# https://bugs.webkit.org/show_bug.cgi?id=53125
+media/audio-mpeg4-supported.html
