@@ -1,5 +1,17 @@
 2011-01-27  Sheriff Bot  <webkit.review.bot@gmail.com>
 
+        Unreviewed, rolling out r76773.
+        http://trac.webkit.org/changeset/76773
+        https://bugs.webkit.org/show_bug.cgi?id=53230
+
+        breaks multiple GTK media tests (Requested by philn-tp on
+        #webkit).
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
+        (WebCore::mimeTypeCache):
+
+2011-01-27  Sheriff Bot  <webkit.review.bot@gmail.com>
+
         Unreviewed, rolling out r76770.
         http://trac.webkit.org/changeset/76770
         https://bugs.webkit.org/show_bug.cgi?id=53229
